[package]
name = "horizon"
version = "0.1.0"
authors = ["neuronull"]
edition = "2021"
rust-version = "1.81"
publish = false

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[workspace]
members = [
    "lib/weather",
]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
tracing = { version = "0.1" }

[dependencies]

# internal
lib-weather = { path = "lib/weather" }

# external
chrono = { version = "0.4.41" }
egui = { version = "0.31" }
egui_extras = { version ="0.31.1" }
egui_plot = { version = "0.32.1" }
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
tokio = { version = "1.46.1", features = ["sync"] }
time = { version = "0.3", features = ["formatting"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "chrono", "env-filter"] }

# workspace
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)
