[package]
name = "horizon"
version = "0.2.0"
authors = ["neuronull"]
edition = "2021"
rust-version = "1.81"
publish = false

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[workspace]
members = [
    "lib/weather",
]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = { version = "0.1" }

[dependencies]

# internal
lib-weather = { path = "lib/weather" }
lib-geolocate = { path = "lib/geolocate" }

# external
chrono = { version = "0.4.41" }
chrono-tz = { version = "0.10.4" }
cfg-if = { version = "1.0.1" }
egui = { version = "0.32.0" }
egui_extras = { version ="0.32.0" }
egui_plot = { version = "0.33.0" }
eframe = { version = "0.32.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
time = { version = "0.3", features = ["formatting"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "chrono", "env-filter"] }

# workspace
anyhow.workspace = true
serde.workspace = true
reqwest.workspace = true
tracing.workspace = true

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.47.1", features = ["sync", "rt-multi-thread"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.6"
tokio = { version = "1.47.0", features = ["sync", "rt"] }
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)

[dev-dependencies]
async-trait.workspace = true
eframe = { version = "0.32.0", default-features = false, features = [
    "accesskit",     # to compile egui_kittest
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
egui_kittest = { version = "0.32.0", default-features = false }
