[package]
name = "lib-geolocate"
version = "0.1.0"
authors = ["neuronull"]
edition = "2021"
rust-version = "1.81"
publish = false

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
tracing.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.6"
