[package]
name = "lib-weather"
version = "0.2.0"
authors = ["neuronull"]
edition = "2021"
rust-version = "1.81"
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
tracing.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.6"
